# python-tiny-web-app

./: Dockerfile  README.md  pyproject.toml
.github/: ci-pipeline.yaml
.github/workflows/: ci-pipeline.yml  ci.yml
api/: main.py
back-end/: main.py
templates/: home.html  index.html
tiny-web-app/: tiny-web-app.py
