[project]
name = "python-tiny-web-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Steve", email = "sagarvedant01@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "uvicorn (>=0.30)",
    "fastapi (>=0.100)",
    "jinja2 (>=3.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.corpoetry e.masonry.api"

[tool.poetry]
package-mode = false